@@ -507,6 +507,7 @@ final class DocumentsWriter {
         }
 
         deletesInRAM.clear();
+        deletesFlushed.clear();
 
         openFiles.clear();
 
